fixed customer success quotes overflow (#1567)
* fixed customer success quotes overflow

* fixed chevrons at enterprise page

---------

--- a/src/css/customers/quote.module.css
+++ b/src/css/customers/quote.module.css
@@ -161,10 +161,10 @@
   }
 
   .controls__chevron-wrapper--left {
-    margin-right: 3rem;
+    margin-right: 0rem;
   }
 
   .controls__chevron-wrapper--right {
-    margin-left: 3rem;
+    margin-left: 0rem;
   }
 }
